Updated by AutoLocalizeURLs.py

--- a/help/s7-release-notes/s7rn2017.md
+++ b/help/s7-release-notes/s7rn2017.md
@@ -28,11 +28,11 @@ Den senaste versionsinformationen för Adobe [!DNL Dynamic Media] Classic-delen 
 
 Adobe är glada över att kunna meddela att det finns HTTP/2-leverans av innehåll, vilket i sin helhet ger bättre prestanda.
 
-Se [HTTP2 Delivery of Content FAQ](https://experienceleague.adobe.com/docs/experience-manager-65/assets/dynamic/http2.html#dynamic).
+Se [HTTP2 Delivery of Content FAQ](https://experienceleague.adobe.com/docs/experience-manager-65/assets/dynamic/http2.html?lang=sv-SE#dynamic).
 
 ## Scene7 Publishing System {#section-24487cb493444d808fb7193f0a00cdd4}
 
-Fullständig dokumentation finns på [https://experienceleague.adobe.com/docs/dynamic-media-classic/using/intro/introduction.html#intro](https://experienceleague.adobe.com/docs/dynamic-media-classic/using/intro/introduction.html#intro)
+Fullständig dokumentation finns på [https://experienceleague.adobe.com/docs/dynamic-media-classic/using/intro/introduction.html?lang=sv-SE#intro](https://experienceleague.adobe.com/docs/dynamic-media-classic/using/intro/introduction.html?lang=sv-SE#intro)
 
 **Nya funktioner, förbättringar och felkorrigeringar**
 
@@ -54,7 +54,7 @@ Fullständig dokumentation finns på [https://experienceleague.adobe.com/docs/dy
 
 ## Visningsprogram (Image Serving 5.8.1) {#section-e1940d4cedc641bca93236b4c1e0cfa7}
 
-Fullständig dokumentation finns i [Referenshandbok för visningsprogram](https://experienceleague.adobe.com/docs/dynamic-media-developer-resources/library/homeviewers.html).
+Fullständig dokumentation finns i [Referenshandbok för visningsprogram](https://experienceleague.adobe.com/docs/dynamic-media-developer-resources/library/homeviewers.html?lang=sv-SE).
 
 **Nya funktioner för Image Serving 5.8.1**
 
