--- a/help/s7-release-notes/s7rn610.md
+++ b/help/s7-release-notes/s7rn610.md
@@ -234,7 +234,7 @@ När du har konfigurerat datorn för att få åtkomst till testservern kan du ko
 
 Nya funktioner och förbättringar
 
-Se även [Referensguide för visningsprogram](https://experienceleague.adobe.com/docs/dynamic-media-developer-resources/library/homeviewers.html?lang=en).
+Se även [Referensguide för visningsprogram](https://experienceleague.adobe.com/docs/dynamic-media-developer-resources/library/homeviewers.html?lang=sv-SE).
 
 * Stöd för utskrift, hämtning och favoriter har lagts till i eCatalog Viewer.
 * Lagt till möjlighet att hämta ParameterManager med getComponent API.
