--- a/help/s7-release-notes/s7rn68.md
+++ b/help/s7-release-notes/s7rn68.md
@@ -75,7 +75,7 @@ Följande stöds nu:
 * Anger inledande zoomområde för ZoomView.
 * ZoomView för att dölja komponenten `IconEffect` när zoomning inte är möjlig
 
-Se även [Referensguide för visningsprogram](https://experienceleague.adobe.com/docs/dynamic-media-developer-resources/library/homeviewers.html?lang=en).
+Se även [Referensguide för visningsprogram](https://experienceleague.adobe.com/docs/dynamic-media-developer-resources/library/homeviewers.html?lang=sv-SE).
 
 <!-- **HTML5 Viewers SDK**
 
@@ -174,7 +174,7 @@ The *Adobe Scene7 HTML5 Viewers SDK* is available as part of the SDK download fr
 
 ## Versionsinformation om Dynamic Media Image Serving Viewers 5.0.1 {#section-3fc1a827bcc84c0488229d310086ad8e}
 
-Se [https://experienceleague.adobe.com/docs/dynamic-media-developer-resources/library/viewers-release-notes/archive/c-rn-04-29-14.html](https://experienceleague.adobe.com/docs/dynamic-media-developer-resources/library/viewers-release-notes/archive/c-rn-04-29-14.html)
+Se [https://experienceleague.adobe.com/docs/dynamic-media-developer-resources/library/viewers-release-notes/archive/c-rn-04-29-14.html?lang=sv-SE](https://experienceleague.adobe.com/docs/dynamic-media-developer-resources/library/viewers-release-notes/archive/c-rn-04-29-14.html?lang=sv-SE)
 
 ## Nya funktioner och felkorrigeringar i Scene7 SDK 2.7.1 {#section-b82b4f546ce44a769e94fb1493511035}
 
