--- a/help/s7-release-notes/s7rn69.md
+++ b/help/s7-release-notes/s7rn69.md
@@ -45,13 +45,13 @@ I version 6.9 finns ett nytt avancerat visningsprogram för eCatalog, inline zoo
 
 ## Bildbehandling {#section-98a61ea9a09940639f357f36969d6e55}
 
-* **Förbättrat responsivt stöd** - Optimera kvaliteten på responsiva bildupplevelser ytterligare genom att definiera olika bildförinställningar eller modifierare för varje brytpunkt. Se [Använda responsivt statiskt bildbibliotek](https://experienceleague.adobe.com/docs/dynamic-media-developer-resources/image-serving-api/image-serving-api/responsive-static-image-library/c-about-responsive-static-image-library.html).
+* **Förbättrat responsivt stöd** - Optimera kvaliteten på responsiva bildupplevelser ytterligare genom att definiera olika bildförinställningar eller modifierare för varje brytpunkt. Se [Använda responsivt statiskt bildbibliotek](https://experienceleague.adobe.com/docs/dynamic-media-developer-resources/image-serving-api/image-serving-api/responsive-static-image-library/c-about-responsive-static-image-library.html?lang=sv-SE).
 
 ## Video {#section-69101b28504543a7ae8a9346d381f913}
 
-* En ny, körklar kodningsförinställning för Adaptiv video som nu fungerar med alla proportioner för att skapa videor som ska skickas till mobiler, surfplattor och datorer. Överförda källvideor som är kodade med den här nya förinställningen har en fast höjd medan bredden automatiskt skalas för att bevara videons proportioner. Se [Videoförinställningar för kodning av videofiler](https://experienceleague.adobe.com/docs/dynamic-media-classic/using/setup/application-setup.html?lang=en#setup).
+* En ny, körklar kodningsförinställning för Adaptiv video som nu fungerar med alla proportioner för att skapa videor som ska skickas till mobiler, surfplattor och datorer. Överförda källvideor som är kodade med den här nya förinställningen har en fast höjd medan bredden automatiskt skalas för att bevara videons proportioner. Se [Videoförinställningar för kodning av videofiler](https://experienceleague.adobe.com/docs/dynamic-media-classic/using/setup/application-setup.html?lang=sv-SE#setup).
 * Förbättrad elastisk skalbarhet och prestanda med kodning.
-* Bildtexter för video är nu tillgängliga i de `Universal_HTML5_MixedMedia_dark`- och `Universal_HTML5_MixedMedia_light`-visningsprogram som inte är installerade. Se [Lägga till bildtexter i videon](https://experienceleague.adobe.com/docs/dynamic-media-classic/using/video/adding-captions-video.html#video).
+* Bildtexter för video är nu tillgängliga i de `Universal_HTML5_MixedMedia_dark`- och `Universal_HTML5_MixedMedia_light`-visningsprogram som inte är installerade. Se [Lägga till bildtexter i videon](https://experienceleague.adobe.com/docs/dynamic-media-classic/using/video/adding-captions-video.html?lang=sv-SE#video).
 
 <!-- OBSOLETE ## Web-to-Print {#section-17c5591d279a48d3b0aea085a19d6321}
 
@@ -59,8 +59,8 @@ I version 6.9 finns ett nytt avancerat visningsprogram för eCatalog, inline zoo
 
 ## Plattform {#section-6f0721d6ab10495a927f509f026d70f4}
 
-* Secure Testing for Render Server requests - Secure Testing for core image servassets and video assets is now extended to also include vignettes. Se [Testa resurser innan du publicerar dem](https://experienceleague.adobe.com/docs/dynamic-media-classic/using/upload-publish/testing-assets-making-them-public.html#upload-publish).
-* Övervakning av funktionen för ogiltig CDN-cache. När du har valt en mall för CDN-validering (se [Allmänna inställningar](https://experienceleague.adobe.com/docs/dynamic-media-classic/using/setup/application-setup.html#general-settings)) och en **[!UICONTROL Invalidate CDN]** -begäran görs visas nu en indikator med en uppskattning av hur lång tid det tar att rensa cachen.
+* Secure Testing for Render Server requests - Secure Testing for core image servassets and video assets is now extended to also include vignettes. Se [Testa resurser innan du publicerar dem](https://experienceleague.adobe.com/docs/dynamic-media-classic/using/upload-publish/testing-assets-making-them-public.html?lang=sv-SE#upload-publish).
+* Övervakning av funktionen för ogiltig CDN-cache. När du har valt en mall för CDN-validering (se [Allmänna inställningar](https://experienceleague.adobe.com/docs/dynamic-media-classic/using/setup/application-setup.html?lang=sv-SE#general-settings)) och en **[!UICONTROL Invalidate CDN]** -begäran görs visas nu en indikator med en uppskattning av hur lång tid det tar att rensa cachen.
 
 ## Tittare {#section-fc0577722d0b431dae3506c8d4e5366f}
 
@@ -137,7 +137,7 @@ När du har konfigurerat datorn för att få åtkomst till testservern kan du ko
 
 Nya funktioner och förbättringar
 
-Se även [Referenshandbok för Scene7-visningsprogram](https://experienceleague.adobe.com/docs/dynamic-media-developer-resources/library/homeviewers.html?lang=en).
+Se även [Referenshandbok för Scene7-visningsprogram](https://experienceleague.adobe.com/docs/dynamic-media-developer-resources/library/homeviewers.html?lang=sv-SE).
 
 * Uppdaterat stöd för Internet Explorer 11.
 * Ändrade visningsprogram till att använda `Track requests` i stället för `Page requests` för Adobe Analytics-spårning.
