Updated by task 'AUTO_TM_MT_1759356793142' Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/dynamic-media-developer-resources.en/commit/e3b4db662077ec455019156ba0fd649af705816b

--- a/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-04-30-15.md
+++ b/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-04-30-15.md
@@ -5,9 +5,9 @@ solution: Experience Manager
 feature: Dynamic Media Classic,Viewers,SDK/API
 role: Developer,User
 exl-id: 6451a838-312a-4ada-a11e-a597ed4eecbc
-source-git-commit: 06806a1b9b02ed44195909e0f322b05e9adbdec1
+source-git-commit: 2d4a26d04e11f544b4cbabaca592d77cfa2241d3
 workflow-type: tm+mt
-source-wordcount: '685'
+source-wordcount: '683'
 ht-degree: 0%
 
 ---
@@ -40,12 +40,7 @@ När du har konfigurerat datorn för att få åtkomst till testservern kan du ko
 
 ## Kända fel och begränsningar {#section-368dd0dc138b44e28b49314e4ad0fa1a}
 
-* Funktionsändringstecken från iscommands läggs inte till i `req=set`-begäran. Modifierare som bara påverkar bildvisningen fungerar bra. Modifierare som påverkar storleken måste användas i en komplex resurs. Till exempel:
-
-  ```
-  https://s7d9.scene7.com/s7viewers/html5/BasicZoomViewer.html?asset= {Scene7SharedAssets/Backpack_B?extendn=0.5%252C0.5%252C0.5%252C0.5}
-  ```
-
+* Funktionsändringstecken från iscommands läggs inte till i `req=set`-begäran. Modifierare som bara påverkar bildvisningen fungerar bra. Modifierare som påverkar storleken måste användas i en komplex resurs.
 * iPad - Manuella uppsättningar kan inte visas i Chrome webbläsare
 * Flyout - Internet Explorer 9 finns ibland kvar på skärmen när musen är avstängd.
 * ZoomViewer - Det går inte att zooma en bild genom att klicka med musen (Windows 8, pekskärm, Chrome).
