--- a/help/s7-release-notes/s7rn2017.md
+++ b/help/s7-release-notes/s7rn2017.md
@@ -4,9 +4,9 @@ description: Den senaste versionsinformationen för Adobe Dynamic Media Classic,
 feature: Dynamic Media Classic
 role: Developer,User
 exl-id: 2826138f-799e-4f2c-8993-0cfdb9328406
-source-git-commit: 4f81f755789613222a66bed2961117604ae19e62
+source-git-commit: baf8015dc93cfa6be0a841243a7e3524f06f1639
 workflow-type: tm+mt
-source-wordcount: '1344'
+source-wordcount: '1342'
 ht-degree: 0%
 
 ---
@@ -28,11 +28,11 @@ Den senaste versionsinformationen för Adobe [!DNL Dynamic Media] Classic-delen 
 
 Adobe är mycket glada över att kunna meddela att HTTP/2-leverans av innehåll är tillgänglig, vilket ger bättre prestanda.
 
-Se [HTTP2 Delivery of Content FAQ](https://experienceleague.adobe.com/docs/experience-manager-65/assets/dynamic/http2.html?lang=sv-SE#dynamic).
+Se [HTTP2 Delivery of Content FAQ](https://experienceleague.adobe.com/docs/experience-manager-65/assets/dynamic/http2.html#dynamic).
 
 ## Scene7 Publishing System {#section-24487cb493444d808fb7193f0a00cdd4}
 
-Fullständig dokumentation finns på [https://experienceleague.adobe.com/docs/dynamic-media-classic/using/intro/introduction.html?lang=sv-SE#intro](https://experienceleague.adobe.com/docs/dynamic-media-classic/using/intro/introduction.html?lang=sv-SE#intro)
+Fullständig dokumentation finns på [https://experienceleague.adobe.com/docs/dynamic-media-classic/using/intro/introduction.html#intro](https://experienceleague.adobe.com/docs/dynamic-media-classic/using/intro/introduction.html#intro)
 
 **Nya funktioner, förbättringar och felkorrigeringar**
 
@@ -54,7 +54,7 @@ Fullständig dokumentation finns på [https://experienceleague.adobe.com/docs/dy
 
 ## Visningsprogram (Image Serving 5.8.1) {#section-e1940d4cedc641bca93236b4c1e0cfa7}
 
-Fullständig dokumentation finns i [Referenshandbok för visningsprogram](https://experienceleague.adobe.com/docs/dynamic-media-developer-resources/library/homeviewers.html?lang=sv-SE).
+Fullständig dokumentation finns i [Referenshandbok för visningsprogram](https://experienceleague.adobe.com/docs/dynamic-media-developer-resources/library/homeviewers.html).
 
 **Nya funktioner för Image Serving 5.8.1**
 
@@ -133,10 +133,7 @@ Fullständig dokumentation finns i [Referenshandbok för visningsprogram](https:
 
 **Kända fel och begränsningar**
 
-* Image Serving-modifierare från `iscommands` läggs inte till i `req=set`-begäran. Modifierare som bara påverkar bildvisningen fungerar bra. Modifierare som påverkar storleken måste användas i en komplex resurs. Till exempel:
-
-  `https://s7d9.scene7.com/s7viewers/html5/BasicZoomViewer.html?asset= {Scene7SharedAssets/Backpack_B?extendn=0.5%252C0.5%252C0.5%252C0.5}`
-
+* Image Serving-modifierare från `iscommands` läggs inte till i `req=set`-begäran. Modifierare som bara påverkar bildvisningen fungerar bra. Modifierare som påverkar storleken måste användas i en komplex resurs.
 * [Utfällbar meny] IE9 finns ibland kvar på skärmen när musen är avstängd.
 * Webbläsarskalning leder till fel storleksändring.
 * iPad 2: Stora e-katalogresurser kraschar Safari på iOS.
