--- a/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-01-13-21.md
+++ b/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-01-13-21.md
@@ -5,9 +5,9 @@ solution: Experience Manager
 feature: Dynamic Media Classic,Viewers,SDK/API
 role: Developer,User
 exl-id: 00a1069f-8cfe-41b4-aecd-33c2b6f9bcca
-source-git-commit: 11acb9151d3ea247eecde3cfbbd295a95c10829c
+source-git-commit: baf8015dc93cfa6be0a841243a7e3524f06f1639
 workflow-type: tm+mt
-source-wordcount: '639'
+source-wordcount: '637'
 ht-degree: 0%
 
 ---
@@ -71,10 +71,7 @@ Paketet innehåller följande:
 
 ## Kända fel och begränsningar {#known-issues-and-restrictions}
 
-* Funktionsändringstecken från IS-kommandon läggs inte till i `req=set`-begäran. Modifierare som bara påverkar bildvisningen fungerar dock bra. Modifierare som påverkar storleken måste användas i en komplex resurs. Till exempel:
-
-  `https://s7d9.scene7.com/s7viewers/html5/BasicZoomViewer.html?asset= {Scene7SharedAssets/Backpack_B?extendn=0.5%252C0.5%252C0.5%252C0.5}`
-
+* Funktionsändringstecken från IS-kommandon läggs inte till i `req=set`-begäran. Modifierare som bara påverkar bildvisningen fungerar dock bra. Modifierare som påverkar storleken måste användas i en komplex resurs.
 * Skalning av webbläsarfönstret leder till felaktig storleksändring.
 * iPad 2 - Stora e-katalogresurser kraschar Safari på iOS.
 
