--- a/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-04-06-21.md
+++ b/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-04-06-21.md
@@ -5,9 +5,9 @@ solution: Experience Manager
 feature: Dynamic Media Classic,Viewers,SDK/API
 role: Developer,User
 exl-id: 636c8c11-9c79-41f3-8101-29fca0fab074
-source-git-commit: 6087b48b898e93e605c3873cbd5132b74d04225f
+source-git-commit: baf8015dc93cfa6be0a841243a7e3524f06f1639
 workflow-type: tm+mt
-source-wordcount: '602'
+source-wordcount: '600'
 ht-degree: 0%
 
 ---
@@ -67,13 +67,11 @@ Paketet innehåller följande:
 
 ## Adobe kundtjänst {#customer-care}
 
-Se [Support](https://experienceleague.adobe.com/docs/dynamic-media-classic/using/intro/support.html?lang=sv-SE#intro).
+Se [Support](https://experienceleague.adobe.com/docs/dynamic-media-classic/using/intro/support.html#intro).
 
 ## Kända fel och begränsningar {#known-issues-and-restrictions}
 
-* Funktionsändringstecken från IS-kommandon läggs inte till i `req=set`-begäran. Modifierare som bara påverkar bildvisningen fungerar dock bra. Modifierare som påverkar storleken måste användas i en komplex resurs. Till exempel:
-
-  `https://s7d9.scene7.com/s7viewers/html5/BasicZoomViewer.html?asset= {Scene7SharedAssets/Backpack_B?extendn=0.5%252C0.5%252C0.5%252C0.5}`
+* Funktionsändringstecken från IS-kommandon läggs inte till i `req=set`-begäran. Modifierare som bara påverkar bildvisningen fungerar dock bra. Modifierare som påverkar storleken måste användas i en komplex resurs.
 
 * Skalning av webbläsarfönstret leder till felaktig storleksändring.
 * iPad 2 - Stora e-katalogresurser kraschar Safari på iOS.
@@ -109,7 +107,7 @@ Se [Support](https://experienceleague.adobe.com/docs/dynamic-media-classic/using
 ### HTML5 Video {#html5-video}
 
 * Ett `max size`-fel kan uppstå i förhandsvisningsbilden. Öka gränsvärdet för Image Serving Publish.
-* Videobeskrivningar kräver en företagsregeluppsättning om HTML-värdsidan hanteras från en extern server (inte en Dynamic Media-server). Kontakta [Adobe kundtjänst](https://experienceleague.adobe.com/docs/dynamic-media-classic/using/intro/support.html?lang=sv-SE#intro) om du behöver hjälp.
+* Videobeskrivningar kräver en företagsregeluppsättning om HTML-värdsidan hanteras från en extern server (inte en Dynamic Media-server). Kontakta [Adobe kundtjänst](https://experienceleague.adobe.com/docs/dynamic-media-classic/using/intro/support.html#intro) om du behöver hjälp.
 * Analysspårning kan rapportera felaktig uppspelningsprocent på grund av buffring.
 * På iPad- eller Android™-enheter visas en svart bildruta i stället för en förhandsvisningsbild.
 * På iPad- eller Android™-enheter blinkar en svart bildruta på skärmen när visningsprogrammet läses in.
