--- a/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-05-03-16.md
+++ b/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-05-03-16.md
@@ -5,9 +5,9 @@ solution: Experience Manager
 feature: Dynamic Media Classic,Viewers,SDK/API
 role: Developer,User
 exl-id: dde851f5-0766-4bd9-84b3-2600dd5f5700
-source-git-commit: 06806a1b9b02ed44195909e0f322b05e9adbdec1
+source-git-commit: baf8015dc93cfa6be0a841243a7e3524f06f1639
 workflow-type: tm+mt
-source-wordcount: '795'
+source-wordcount: '793'
 ht-degree: 0%
 
 ---
@@ -54,12 +54,7 @@ När du har konfigurerat datorn för att få åtkomst till testservern kan du ko
 
 ## Kända fel och begränsningar för 5.4.2 {#section-af67bc1734844f31a89a09004b558c6e}
 
-* Funktionsändringstecken från iscommands läggs inte till i `req=set`-begäran. Modifierare som bara påverkar bildvisningen fungerar bra. Modifierare som påverkar storleken måste användas i en komplex resurs. Till exempel:
-
-  ```
-  https://s7d9.scene7.com/s7viewers/html5/BasicZoomViewer.html?asset= {Scene7SharedAssets/Backpack_B?extendn=0.5%252C0.5%252C0.5%252C0.5}
-  ```
-
+* Funktionsändringstecken från iscommands läggs inte till i `req=set`-begäran. Modifierare som bara påverkar bildvisningen fungerar bra. Modifierare som påverkar storleken måste användas i en komplex resurs.
 * Flyout - Internet Explorer 9 finns ibland kvar på skärmen när musen är avstängd.
 * ZoomViewer - Det går inte att zooma en bild genom att klicka med musen (Windows 8, pekskärm, Chrome).
 * Webbläsarskalning leder till fel storleksändring.
