--- a/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-05-20-15.md
+++ b/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-05-20-15.md
@@ -5,9 +5,9 @@ solution: Experience Manager
 feature: Dynamic Media Classic,Viewers,SDK/API
 role: Developer,User
 exl-id: 3008cdf7-7bc3-4e68-910d-5dbd1db41f8a
-source-git-commit: 06806a1b9b02ed44195909e0f322b05e9adbdec1
+source-git-commit: baf8015dc93cfa6be0a841243a7e3524f06f1639
 workflow-type: tm+mt
-source-wordcount: '839'
+source-wordcount: '837'
 ht-degree: 0%
 
 ---
@@ -55,12 +55,7 @@ Adobe undersöker olika alternativ för att åtgärda detta problem i Firefox i 
 
 ## Kända fel och begränsningar för 5.2.2 {#section-368dd0dc138b44e28b49314e4ad0fa1a}
 
-* Funktionsändringstecken från iscommands läggs inte till i `req=set`-begäran. Modifierare som bara påverkar bildvisningen fungerar bra. Modifierare som påverkar storleken måste användas i en komplex resurs. Till exempel:
-
-  ```
-  https://s7d9.scene7.com/s7viewers/html5/BasicZoomViewer.html?asset= {Scene7SharedAssets/Backpack_B?extendn=0.5%252C0.5%252C0.5%252C0.5}
-  ```
-
+* Funktionsändringstecken från iscommands läggs inte till i `req=set`-begäran. Modifierare som bara påverkar bildvisningen fungerar bra. Modifierare som påverkar storleken måste användas i en komplex resurs.
 * iPad - Manuella uppsättningar kan inte visas i Chrome webbläsare.
 * Flyout - Internet Explorer 9 finns ibland kvar på skärmen när musen är avstängd.
 * ZoomViewer - Det går inte att zooma en bild genom att klicka med musen (Windows 8, pekskärm, Chrome).
