--- a/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-06-03-20.md
+++ b/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-06-03-20.md
@@ -5,9 +5,9 @@ solution: Experience Manager
 feature: Dynamic Media Classic,Viewers,SDK/API
 role: Developer,User
 exl-id: 4d9909a8-c515-4f2d-8a21-ec2968f6e4b8
-source-git-commit: c99aac44711852d8ac661878e11ce0b19d3dbf60
+source-git-commit: baf8015dc93cfa6be0a841243a7e3524f06f1639
 workflow-type: tm+mt
-source-wordcount: '536'
+source-wordcount: '534'
 ht-degree: 0%
 
 ---
@@ -56,10 +56,7 @@ Paketet innehåller följande:
 
 ## Kända fel och begränsningar för 5.13.1 {#section-af67bc1734844f31a89a09004b558c6e}
 
-* Funktionsändringstecken från IS-kommandon läggs inte till i `req=set`-begäran. Modifierare som bara påverkar bildvisningen fungerar dock bra. Modifierare som påverkar storleken måste användas i en komplex resurs. Till exempel:
-
-  `https://s7d9.scene7.com/s7viewers/html5/BasicZoomViewer.html?asset= {Scene7SharedAssets/Backpack_B?extendn=0.5%252C0.5%252C0.5%252C0.5}`
-
+* Funktionsändringstecken från IS-kommandon läggs inte till i `req=set`-begäran. Modifierare som bara påverkar bildvisningen fungerar dock bra. Modifierare som påverkar storleken måste användas i en komplex resurs.
 * Skalning av webbläsarfönstret leder till felaktig storleksändring.
 * iPad 2 - Stora e-katalogresurser kraschar Safari på iOS.
 
