--- a/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-09-18-17.md
+++ b/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-09-18-17.md
@@ -5,9 +5,9 @@ solution: Experience Manager
 feature: Dynamic Media Classic,Viewers,SDK/API
 role: Developer,User
 exl-id: 458e11b1-74f3-4a70-87c8-49cef32acf00
-source-git-commit: 11acb9151d3ea247eecde3cfbbd295a95c10829c
+source-git-commit: baf8015dc93cfa6be0a841243a7e3524f06f1639
 workflow-type: tm+mt
-source-wordcount: '641'
+source-wordcount: '639'
 ht-degree: 0%
 
 ---
@@ -41,10 +41,7 @@ ht-degree: 0%
 
 ## Kända fel och begränsningar för 5.8.2 {#section-af67bc1734844f31a89a09004b558c6e}
 
-* Funktionsändringstecken från IS-kommandon läggs inte till i `req=set`-begäran. Modifierare som bara påverkar bildvisningen fungerar dock bra. Modifierare som påverkar storleken måste användas i en komplex resurs. Till exempel:
-
-  `https://s7d9.scene7.com/s7viewers/html5/BasicZoomViewer.html?asset= {Scene7SharedAssets/Backpack_B?extendn=0.5%252C0.5%252C0.5%252C0.5}`
-
+* Funktionsändringstecken från IS-kommandon läggs inte till i `req=set`-begäran. Modifierare som bara påverkar bildvisningen fungerar dock bra. Modifierare som påverkar storleken måste användas i en komplex resurs.
 * Utfällbar visningsprogram - Internet Explorer 9 visas ibland fortfarande på skärmen när musen är avstängd.
 * Skalning av webbläsarfönstret leder till felaktig storleksändring.
 * iPad 2 - En stor e-katalogresurs kraschar Safari på iOS.
