Updated by AutoLocalizeURLs.py

--- a/help/aem-viewers-ref/c-release-notes/c-rn-03-02-22.md
+++ b/help/aem-viewers-ref/c-release-notes/c-rn-03-02-22.md
@@ -82,7 +82,7 @@ Paketet innehåller följande:
 
 ## Adobe kundtjänst {#customer-care}
 
-Se [Support](https://experienceleague.adobe.com/docs/dynamic-media-classic/using/intro/support.html#intro).
+Se [Support](https://experienceleague.adobe.com/docs/dynamic-media-classic/using/intro/support.html?lang=sv-SE#intro).
 
 ## Kända fel och begränsningar {#known-issues-and-restrictions}
 
@@ -121,7 +121,7 @@ Se [Support](https://experienceleague.adobe.com/docs/dynamic-media-classic/using
 ### HTML5 Video {#html5-video}
 
 * Ett `max size`-fel kan uppstå i förhandsvisningsbilden. Öka gränsvärdet för Image Serving Publish.
-* Videobeskrivningar kräver en företagsregeluppsättning om HTML-värdsidan hanteras från en extern server (inte en Dynamic Media-server). Kontakta [Adobe kundtjänst](https://experienceleague.adobe.com/docs/dynamic-media-classic/using/intro/support.html#intro) om du behöver hjälp.
+* Videobeskrivningar kräver en företagsregeluppsättning om HTML-värdsidan hanteras från en extern server (inte en Dynamic Media-server). Kontakta [Adobe kundtjänst](https://experienceleague.adobe.com/docs/dynamic-media-classic/using/intro/support.html?lang=sv-SE#intro) om du behöver hjälp.
 * Analysspårning kan rapportera felaktig uppspelningsprocent på grund av buffring.
 * På iPad- eller Android™-enheter visas en svart bildruta i stället för en förhandsvisningsbild.
 * På iPad- eller Android™-enheter blinkar en svart bildruta på skärmen när visningsprogrammet läses in.
